completed documentation associated to the active learning procesS

--- a/active_learning/active.ipynb
+++ b/active_learning/active.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c7f7903b-7bbe-41b6-a21b-e73ede0ab03d",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,16 @@
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, matthews_corrcoef, confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b76ab33-f891-4c56-87f7-14dd3f856e1d",
+   "metadata": {},
+   "source": [
+    "## Problem Statement\n",
+    "\n",
+    "The business problem we are going to solve is associated to demographic modelling. Given some vital statistics associated to the users on our platform, we want to identify the gender associated to the user. We have a large amount of data but little to no labelled data. The goal is to build a model to identify the gender of a user."
    ]
   },
   {
@@ -40,12 +50,17 @@
    "source": [
     "In case this needs to be said, if you're using this approach to solve a problem prominent to you, don't bother generating a dataset, use the one you're working with. I'm only generating a dataset for simplicity, reproducibility and to outline a use case on how such a problem could be solved using active learning.  \n",
     "\n",
-    "We are going to generate fake vital statistics associated to humans. The function we're building will randomly generate fake height, weight and age data. "
+    "We are going to generate fake vital statistics associated to humans. The function we're building will randomly generate fake height, weight and age data. The resulting DataFrame from the function outlined below will yield a CSV with :   \n",
+    "- uuid (UUID4) : A unique identifier to the user  \n",
+    "- height (Integer) : The height of the user in cm  \n",
+    "- weight (Integer) : The weight of the user in pounds (lbs)  \n",
+    "- age (Integer) : The age of the user  \n",
+    "- gender (String) : The gender associated to the user if known  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6428589d-7938-4efd-86b7-72d3d20bb0b8",
    "metadata": {},
    "outputs": [],
@@ -92,10 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "065c30ec-3803-463d-befe-61c453c0f674",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 4)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gender_df = generate_data(n = 1000)\n",
     "gender_df.shape"
@@ -103,10 +129,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8ff96ce2-5987-477e-9cad-5d21acc406ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uuid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>e64f4c9c-1132-4a95-b0a9-6ae6d54bd43c</th>\n",
+       "      <td>144</td>\n",
+       "      <td>217</td>\n",
+       "      <td>42</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>667294ec-c6c6-47b8-86cd-b0987d23f19a</th>\n",
+       "      <td>93</td>\n",
+       "      <td>225</td>\n",
+       "      <td>52</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77a163ae-05a3-4a87-96d9-b68103af541d</th>\n",
+       "      <td>106</td>\n",
+       "      <td>206</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7bdafd42-cfd5-47d1-a881-91c9f0ab6c18</th>\n",
+       "      <td>142</td>\n",
+       "      <td>161</td>\n",
+       "      <td>58</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c348e0fc-64ff-43ba-b50d-632585073e28</th>\n",
+       "      <td>68</td>\n",
+       "      <td>245</td>\n",
+       "      <td>68</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      height  weight  age  gender\n",
+       "uuid                                                             \n",
+       "e64f4c9c-1132-4a95-b0a9-6ae6d54bd43c     144     217   42     NaN\n",
+       "667294ec-c6c6-47b8-86cd-b0987d23f19a      93     225   52     NaN\n",
+       "77a163ae-05a3-4a87-96d9-b68103af541d     106     206   39  Female\n",
+       "7bdafd42-cfd5-47d1-a881-91c9f0ab6c18     142     161   58     NaN\n",
+       "c348e0fc-64ff-43ba-b50d-632585073e28      68     245   68     NaN"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gender_df.head()"
    ]
@@ -121,10 +236,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "91ba120b-8c0a-4aab-abba-05f3071d3dd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>125.906000</td>\n",
+       "      <td>140.664000</td>\n",
+       "      <td>36.735000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>43.570007</td>\n",
+       "      <td>64.555329</td>\n",
+       "      <td>19.603037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>139.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>163.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>53.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            height       weight          age\n",
+       "count  1000.000000  1000.000000  1000.000000\n",
+       "mean    125.906000   140.664000    36.735000\n",
+       "std      43.570007    64.555329    19.603037\n",
+       "min      50.000000    30.000000     3.000000\n",
+       "25%      88.000000    84.000000    19.000000\n",
+       "50%     126.000000   139.000000    38.000000\n",
+       "75%     163.000000   199.000000    53.000000\n",
+       "max     200.000000   250.000000    70.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gender_df.describe()"
    ]
@@ -142,25 +353,46 @@
    "id": "038f443b-36e7-41c2-80ac-cf4a06050487",
    "metadata": {},
    "source": [
-    "Here people would usually annotate their datasets associated to the labels, "
+    "Here people would usually annotate their datasets associated to the labels, for the sake of speed and simplicity I'm going to select the randomly assigned gender data. There are various sampling stategies (like purposeful sampling and convenience sampling) you can investigate into to best select the data points to annotate. Purposeful sampling refers to selective sampling which would yield informative information to the model. Convenience sampling refers to easy to label information. Be aware, both of these methods does introduce a bias into the labelling process and could positively / negatively impact the model performance (hard to say and depends highly on the problem you're trying to solve) in comparison to random sampling."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "48c384ca-d0d8-48e7-97be-f8461ca0ec03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Female    129\n",
+       "Male      122\n",
+       "Name: gender, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gender_df['gender'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ee4ae5d8-5982-451c-953f-b7372b998076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(251, 4) (749, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "train_df = gender_df[~gender_df['gender'].isna()].copy()\n",
     "pred_df = gender_df[gender_df['gender'].isna()].copy()\n",
@@ -176,8 +408,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed8f8bb3-8ab0-400d-8e17-eea4b3ec89f5",
+   "metadata": {},
+   "source": [
+    "I'm going to use the Gradient Boosting model to train the binary classifier, in a real world situation you should try many different classifiers (like SVC, Logistic Regression, KNN, XG Boost, etc.) and evaluate the performance of each. You should also conduct hyperparameter tuning on these models to optimize the performance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f017f4fb-8f12-444f-b76c-91d4c4ab0036",
    "metadata": {},
    "outputs": [],
@@ -199,10 +439,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e3920e1-cca0-4286-a218-5a0af3617311",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# GBC classifier\n",
     "clf = GradientBoostingClassifier()\n",
@@ -221,10 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9c7e0ecc-8d0f-462b-8ac5-18998cc3bfb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy :  0.5526315789473685\n",
+      "MCC Score :  0.10277777777777777\n",
+      "Classification Report : \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Female       0.57      0.57      0.57        40\n",
+      "        Male       0.53      0.53      0.53        36\n",
+      "\n",
+      "    accuracy                           0.55        76\n",
+      "   macro avg       0.55      0.55      0.55        76\n",
+      "weighted avg       0.55      0.55      0.55        76\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def clf_eval(clf, x_test, y_test):\n",
     "    '''\n",
@@ -280,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3e5e56d6-f6cd-4f61-99fc-582ff14abc9f",
    "metadata": {},
    "outputs": [],
@@ -309,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b15d2e12-b94e-47b9-8546-b6df6a55ab9f",
    "metadata": {},
    "outputs": [],
@@ -354,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "993a780f-cbd5-4e74-877f-fcb4343385f1",
    "metadata": {},
    "outputs": [],
@@ -364,17 +634,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c8ba008a-6fd3-4ee8-a76e-2ec29ca8b82e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neither      481\n",
+       "annotate     210\n",
+       "annotated     58\n",
+       "Name: annotate_decision, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred_df['annotate_decision'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c34a2e89-fca9-464c-99ab-e38973ab3ef5",
    "metadata": {},
    "outputs": [],
@@ -388,12 +672,12 @@
    "id": "990e596f-2bac-4e45-98ad-e286995a5f91",
    "metadata": {},
    "source": [
-    "I'm just going to randomly assign a gender out of simplicity (since this is randomly generated data), but in reality you should manually annotate this."
+    "I'm just going to randomly assign a gender out of simplicity (since this is randomly generated data), but in reality you should manually label this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "80e9f577-c67c-4b44-a010-28e9ca3aa38e",
    "metadata": {},
    "outputs": [],
@@ -413,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "be52ed2f-3781-4ade-8420-ad5c62e5d967",
    "metadata": {},
    "outputs": [],
@@ -423,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "82f4bcc6-60ae-4dc5-896a-63f7e371334d",
    "metadata": {},
    "outputs": [],
@@ -433,10 +717,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "dc574977-bc23-40c8-a7e0-6af29de96728",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(396, 7)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "annotated_df.shape"
    ]
@@ -451,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1c0ddb38-acbb-4c45-adbd-e2db94541d8d",
    "metadata": {},
    "outputs": [],
@@ -473,10 +768,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3e098dfd-ceb1-468b-8f08-91c95025e50b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier()"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# GBC classifier\n",
     "clf = GradientBoostingClassifier()\n",
@@ -495,10 +801,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ecda2526-0db6-48e3-9a6b-0b520925c19a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy :  0.5294117647058824\n",
+      "MCC Score :  0.06628740703572837\n",
+      "Classification Report : \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Female       0.58      0.49      0.53        65\n",
+      "        Male       0.48      0.57      0.53        54\n",
+      "\n",
+      "    accuracy                           0.53       119\n",
+      "   macro avg       0.53      0.53      0.53       119\n",
+      "weighted avg       0.54      0.53      0.53       119\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "clf_eval(\n",
     "    clf,\n",
@@ -509,19 +834,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31b3819-66a8-4579-893d-69a10829458a",
+   "id": "a38b95cb-3626-4b4f-a1c0-044e6d25c872",
    "metadata": {},
    "source": [
-    "## Concluding Remarks"
+    "## Caveats\n",
+    "\n",
+    "Be aware that this example above was associated to randomly generated data, this example was to show the power of active learning and how to use it to solve problems when there are a limited amount of labelled data. Although the performance of the model improved, the model is essentially learning randomness so do take these results with a grain of salt. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdf0983e-e65b-4402-aaf3-23f3739b8dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
