--- a/active_learning/active.ipynb
+++ b/active_learning/active.ipynb
@@ -169,38 +169,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>e64f4c9c-1132-4a95-b0a9-6ae6d54bd43c</th>\n",
-       "      <td>144</td>\n",
-       "      <td>217</td>\n",
-       "      <td>42</td>\n",
+       "      <th>c7f7bb27-5233-46f3-a699-da4c8fa8987b</th>\n",
+       "      <td>133</td>\n",
+       "      <td>118</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>667294ec-c6c6-47b8-86cd-b0987d23f19a</th>\n",
-       "      <td>93</td>\n",
-       "      <td>225</td>\n",
-       "      <td>52</td>\n",
+       "      <th>43e56764-cf8a-420a-a35c-f91a71282da3</th>\n",
+       "      <td>162</td>\n",
+       "      <td>77</td>\n",
+       "      <td>13</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77a163ae-05a3-4a87-96d9-b68103af541d</th>\n",
-       "      <td>106</td>\n",
-       "      <td>206</td>\n",
-       "      <td>39</td>\n",
+       "      <th>6e3f9de8-3de7-4e39-8969-344d500ff2f1</th>\n",
+       "      <td>81</td>\n",
+       "      <td>153</td>\n",
+       "      <td>11</td>\n",
        "      <td>Female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7bdafd42-cfd5-47d1-a881-91c9f0ab6c18</th>\n",
-       "      <td>142</td>\n",
-       "      <td>161</td>\n",
-       "      <td>58</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>b7758055-9b18-4be5-b073-fe33b997bae9</th>\n",
+       "      <td>186</td>\n",
+       "      <td>105</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c348e0fc-64ff-43ba-b50d-632585073e28</th>\n",
-       "      <td>68</td>\n",
-       "      <td>245</td>\n",
-       "      <td>68</td>\n",
+       "      <th>a4283816-7538-4411-94ad-44429d0471bb</th>\n",
+       "      <td>127</td>\n",
+       "      <td>247</td>\n",
+       "      <td>39</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -210,11 +210,11 @@
       "text/plain": [
        "                                      height  weight  age  gender\n",
        "uuid                                                             \n",
-       "e64f4c9c-1132-4a95-b0a9-6ae6d54bd43c     144     217   42     NaN\n",
-       "667294ec-c6c6-47b8-86cd-b0987d23f19a      93     225   52     NaN\n",
-       "77a163ae-05a3-4a87-96d9-b68103af541d     106     206   39  Female\n",
-       "7bdafd42-cfd5-47d1-a881-91c9f0ab6c18     142     161   58     NaN\n",
-       "c348e0fc-64ff-43ba-b50d-632585073e28      68     245   68     NaN"
+       "c7f7bb27-5233-46f3-a699-da4c8fa8987b     133     118    5     NaN\n",
+       "43e56764-cf8a-420a-a35c-f91a71282da3     162      77   13     NaN\n",
+       "6e3f9de8-3de7-4e39-8969-344d500ff2f1      81     153   11  Female\n",
+       "b7758055-9b18-4be5-b073-fe33b997bae9     186     105   24    Male\n",
+       "a4283816-7538-4411-94ad-44429d0471bb     127     247   39     NaN"
       ]
      },
      "execution_count": 4,
@@ -231,7 +231,7 @@
    "id": "4182d15c-9f74-4b74-b549-2cf600f8346d",
    "metadata": {},
    "source": [
-    "Of course, since we randomly generated data, we will have weird labelled values, like a 39 year old man who weighs 214 pounds and is 78 centimeters tall. "
+    "Of course, since we randomly generated data, we will have weird labelled values, like a 11 year old girl who weighs 153 pounds and is 81 centimeters tall. "
    ]
   },
   {
@@ -269,66 +269,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>1000.00000</td>\n",
        "      <td>1000.000000</td>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>1000.000000</td>\n",
+       "      <td>1000.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>125.906000</td>\n",
-       "      <td>140.664000</td>\n",
-       "      <td>36.735000</td>\n",
+       "      <td>126.93600</td>\n",
+       "      <td>141.352000</td>\n",
+       "      <td>37.28200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>43.570007</td>\n",
-       "      <td>64.555329</td>\n",
-       "      <td>19.603037</td>\n",
+       "      <td>43.79829</td>\n",
+       "      <td>64.175935</td>\n",
+       "      <td>19.44764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>50.00000</td>\n",
        "      <td>30.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>3.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>84.000000</td>\n",
-       "      <td>19.000000</td>\n",
+       "      <td>88.00000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>21.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>126.000000</td>\n",
-       "      <td>139.000000</td>\n",
-       "      <td>38.000000</td>\n",
+       "      <td>129.00000</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>37.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>163.000000</td>\n",
-       "      <td>199.000000</td>\n",
-       "      <td>53.000000</td>\n",
+       "      <td>166.00000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>54.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>200.000000</td>\n",
+       "      <td>200.00000</td>\n",
        "      <td>250.000000</td>\n",
-       "      <td>70.000000</td>\n",
+       "      <td>70.00000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            height       weight          age\n",
-       "count  1000.000000  1000.000000  1000.000000\n",
-       "mean    125.906000   140.664000    36.735000\n",
-       "std      43.570007    64.555329    19.603037\n",
-       "min      50.000000    30.000000     3.000000\n",
-       "25%      88.000000    84.000000    19.000000\n",
-       "50%     126.000000   139.000000    38.000000\n",
-       "75%     163.000000   199.000000    53.000000\n",
-       "max     200.000000   250.000000    70.000000"
+       "           height       weight         age\n",
+       "count  1000.00000  1000.000000  1000.00000\n",
+       "mean    126.93600   141.352000    37.28200\n",
+       "std      43.79829    64.175935    19.44764\n",
+       "min      50.00000    30.000000     3.00000\n",
+       "25%      88.00000    87.000000    21.00000\n",
+       "50%     129.00000   145.000000    37.00000\n",
+       "75%     166.00000   197.000000    54.00000\n",
+       "max     200.00000   250.000000    70.00000"
       ]
      },
      "execution_count": 5,
@@ -365,8 +365,8 @@
     {
      "data": {
       "text/plain": [
-       "Female    129\n",
-       "Male      122\n",
+       "Male      128\n",
+       "Female    104\n",
        "Name: gender, dtype: int64"
       ]
      },
@@ -389,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(251, 4) (749, 4)\n"
+      "(232, 4) (768, 4)\n"
      ]
     }
    ],
@@ -480,17 +480,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy :  0.5526315789473685\n",
-      "MCC Score :  0.10277777777777777\n",
+      "Testing Accuracy :  0.5\n",
+      "MCC Score :  0.004973585797187662\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      Female       0.57      0.57      0.57        40\n",
-      "        Male       0.53      0.53      0.53        36\n",
+      "      Female       0.42      0.52      0.46        29\n",
+      "        Male       0.59      0.49      0.53        41\n",
       "\n",
-      "    accuracy                           0.55        76\n",
-      "   macro avg       0.55      0.55      0.55        76\n",
-      "weighted avg       0.55      0.55      0.55        76\n",
+      "    accuracy                           0.50        70\n",
+      "   macro avg       0.50      0.50      0.50        70\n",
+      "weighted avg       0.52      0.50      0.50        70\n",
       "\n"
      ]
     }
@@ -585,7 +585,7 @@
    "outputs": [],
    "source": [
     "# low predictions with threshold <= 0.6\n",
-    "low_th= 0.6\n",
+    "low_th = 0.6\n",
     "\n",
     "# high predictions with threshold >= 0.9\n",
     "high_th = 0.9\n",
@@ -641,9 +641,9 @@
     {
      "data": {
       "text/plain": [
-       "neither      481\n",
-       "annotate     210\n",
-       "annotated     58\n",
+       "neither      504\n",
+       "annotate     144\n",
+       "annotated    120\n",
        "Name: annotate_decision, dtype: int64"
       ]
      },
@@ -724,7 +724,7 @@
     {
      "data": {
       "text/plain": [
-       "(396, 7)"
+       "(401, 7)"
       ]
      },
      "execution_count": 19,
@@ -809,17 +809,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy :  0.5294117647058824\n",
-      "MCC Score :  0.06628740703572837\n",
+      "Testing Accuracy :  0.7520661157024794\n",
+      "MCC Score :  0.5242538184376094\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      Female       0.58      0.49      0.53        65\n",
-      "        Male       0.48      0.57      0.53        54\n",
+      "      Female       0.85      0.68      0.76        69\n",
+      "        Male       0.67      0.85      0.75        52\n",
       "\n",
-      "    accuracy                           0.53       119\n",
-      "   macro avg       0.53      0.53      0.53       119\n",
-      "weighted avg       0.54      0.53      0.53       119\n",
+      "    accuracy                           0.75       121\n",
+      "   macro avg       0.76      0.76      0.75       121\n",
+      "weighted avg       0.77      0.75      0.75       121\n",
       "\n"
      ]
     }
