--- a/community_detection/detection.ipynb
+++ b/community_detection/detection.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "028008ad-1954-42dd-8f60-9e610f73e0eb",
    "metadata": {},
    "outputs": [
@@ -1266,12 +1266,14 @@
        " 999: 0}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "comm_dct"
+   ]
   },
   {
    "cell_type": "code",
