resolved bug in making sure that the degree sequence for the configuration model is always 1

--- a/community_detection/detection.ipynb
+++ b/community_detection/detection.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "e5375aac-dcfe-430e-ac9a-093a43e2da58",
    "metadata": {},
    "outputs": [
@@ -42,11 +42,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1294\n",
+      "1294\n",
       "Name: \n",
       "Type: MultiGraph\n",
       "Number of nodes: 200\n",
-      "Number of edges: 636\n",
-      "Average degree:   6.3600\n"
+      "Number of edges: 647\n",
+      "Average degree:   6.4700\n"
      ]
     }
    ],
@@ -82,6 +84,11 @@
     "            n,\n",
     "            proba\n",
     "        )\n",
+    "\n",
+    "        if sum(deg_sequence) % 2 != 0:\n",
+    "            # to ensure that the degree sequence is always even for the configuration model\n",
+    "            deg_sequence[1] = deg_sequence[1] + 1\n",
+    "\n",
     "        return nx.configuration_model(deg_sequence)\n",
     "    raise ValueError(\"Probabilities do not equal to 1\")\n",
     "    \n",
