resolved bug in making sure that the degree sequence for the configuration model is always 1

--- a/n2v/n2v.ipynb
+++ b/n2v/n2v.ipynb
@@ -82,6 +82,11 @@
     "            n,\n",
     "            proba\n",
     "        )\n",
+    "        \n",
+    "        if sum(deg_sequence) % 2 != 0:\n",
+    "            # to ensure that the degree sequence is always even for the configuration model\n",
+    "            deg_sequence[1] = deg_sequence[1] + 1\n",
+    "        \n",
     "        return nx.configuration_model(deg_sequence)\n",
     "    raise ValueError(\"Probabilities do not equal to 1\")"
    ]
@@ -118,8 +123,8 @@
       "Name: \n",
       "Type: MultiGraph\n",
       "Number of nodes: 1000\n",
-      "Number of edges: 3143\n",
-      "Average degree:   6.2860\n"
+      "Number of edges: 3152\n",
+      "Average degree:   6.3040\n"
      ]
     }
    ],
