added initial notebook structure

--- a/lin_reg/reg.ipynb
+++ b/lin_reg/reg.ipynb
@@ -1,9 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "01d61c82-c84d-451b-846d-396b6857f0c4",
+   "metadata": {},
+   "source": [
+    "# Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b90420df-54b9-47be-a8ef-ee62517269c8",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6c99fbc-27f9-4ada-80ab-d8e146df8e06",
+   "id": "51a6e5c3-3ca6-44ef-b41c-fef91dc5a69c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7407653b-5488-4cde-9f94-10de2e0075ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e40b82b3-d427-4ecc-a52a-b0e330b420ce",
+   "metadata": {},
+   "source": [
+    "# Bayesian Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd53784d-6a02-4363-b689-22572c0da1a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff06a6b-5e3e-4c2e-8b85-4168850417ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fbbedfd-8b02-440e-802c-c004b1e6a2f0",
    "metadata": {},
    "outputs": [],
    "source": []
