added more documentation

--- a/lin_reg/reg.ipynb
+++ b/lin_reg/reg.ipynb
@@ -12,7 +12,21 @@
    "cell_type": "markdown",
    "id": "b90420df-54b9-47be-a8ef-ee62517269c8",
    "metadata": {},
-   "source": []
+   "source": [
+    "This article will provide an indepth overview of the mathematics behind linear and bayesian linear regression and their associated implementations in Python. The implementations will include building the algorithms from scratch as well as using Sci-Kit Learn (sklearn) to reference their pre-built linear regression model. \n",
+    "\n",
+    "Table of Contents :   \n",
+    "- Introduction to Linear Regression  \n",
+    "- Parameter Estimation   \n",
+    "- Linear Regression Implementation  \n",
+    "    - Requirements  \n",
+    "- Sci-Kit Learn Implementation\n",
+    "- Introduction to Bayesian Linear Regression  \n",
+    "- Bayesian Linear Regression Implementation  \n",
+    "    - Requirements  \n",
+    "- Concluding Remarks  \n",
+    "- Resources  "
+   ]
   },
   {
    "cell_type": "code",
